# dmafr

./: CMakeLists.txt  README.md
include/: pdf.hpp  scrapf.hpp
src/: main.cpp  pdf.cpp  scrapf.cpp
